# misc

./: .gitignore  .gitmodules  oop_spy.py  service_queue_bus.py  virus_simul.py
SMLEG/: SM.c  db.c  headers.h  main.c
ai_multiagent/: pacman_multi_agents_ai.py
c_pp/maxmin/tests/: CMakeLists.txt  HeapTests  HeapTests.cpp
fin/: bonds-final-task.ipynb  bonds.ipynb  bonds_int_returns.ipynb  imoex_161231_191220.csv  markovitz.ipynb  moex-securities.ipynb  refined.txt
framac/: euclid.c  how-to-start.txt  idiv.c  sort_wrapper.c
github_actions_log_grabber/: Cargo.toml
grid/: advanced.py  generator.py  simple.py
hse-parallel/: randomfill.cpp
interpolation/: Spline interpolation.ipynb
matrix/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  expression.cpp  expression.h  fail  failbit.cpp  matrix-cli  matrix-cli.cpp  matrix.cpp  operand.cpp  operand.h  operation.cpp  operation.h  parser.ypp  scanner.lpp  structs.h
matrix/fison/: .main.c.swo  .parser.y.swn  .parser.y.swo  .scanner.l.swo  Makefile  calc.x  lex.yy.c  lex.yy.h  log.html  main.c  output.xml  parser.tab.c  parser.tab.h  parser.y  report.html  scanner.l  tests.robot
matstat/: task01.ipynb  task02.ipynb  task03.ipynb  task05.ipynb
pascal/: 123.pas  PhoneBook.pas  Project1.pas  dz4_1.pas  dz_10_1.pas  dz_10_2.pas  dz_10_3.pas  dz_12_1.pas  dz_12_2.pas  dz_12_3.pas  dz_15_1.pas  dz_16_1.pas  dz_16_xxx.pas  dz_2_3.pas  dz_2_5.pas  dz_2_6.pas  dz_3_1.pas  dz_4_1.pas  dz_4_3.pas  dz_4_4.pas  dz_5_1.pas  dz_5_2.pas  dz_5_3.pas  dz_6_1.pas  dz_6_2.pas  dz_6_2_back.pas  dz_6_3.pas  dz_6__2.pas  (+14 more)
(+360 files in other folders)
